tests/rosetta/out/Smalltalk/call-an-object-method-1.out
Object: Dictionary new: 8 "<0x7f66808123b0>" error: Invalid argument ValueMethod: key not found
SystemExceptions.NotFound(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotFound(Exception)>>signal: (ExcHandling.st:264)
SystemExceptions.NotFound class>>signalOn:what: (SysExcept.st:731)
[] in Dictionary>>at: (Dictionary.st:139)
Dictionary>>at:ifAbsent: (Dictionary.st:149)
Dictionary>>at: (Dictionary.st:138)
UndefinedObject>>executeStatements (/tmp/call-an-object-method-1.st:6)
Object: Dictionary new: 8 "<0x7f6680817d10>" error: Invalid argument PointerMethod: key not found
SystemExceptions.NotFound(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotFound(Exception)>>signal: (ExcHandling.st:264)
SystemExceptions.NotFound class>>signalOn:what: (SysExcept.st:731)
[] in Dictionary>>at: (Dictionary.st:139)
Dictionary>>at:ifAbsent: (Dictionary.st:149)
Dictionary>>at: (Dictionary.st:138)
UndefinedObject>>executeStatements (/tmp/call-an-object-method-1.st:7)
Object: Dictionary new: 8 "<0x7f6680817d10>" error: Invalid argument ValueMethod: key not found
"Global garbage collection... done"
SystemExceptions.NotFound(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotFound(Exception)>>signal: (ExcHandling.st:264)
SystemExceptions.NotFound class>>signalOn:what: (SysExcept.st:731)
[] in Dictionary>>at: (Dictionary.st:139)
Dictionary>>at:ifAbsent: (Dictionary.st:149)
Dictionary>>at: (Dictionary.st:138)
UndefinedObject>>executeStatements (/tmp/call-an-object-method-1.st:8)
Object: Dictionary new: 8 "<0x7f66808123b0>" error: Invalid argument PointerMethod: key not found
SystemExceptions.NotFound(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotFound(Exception)>>signal: (ExcHandling.st:264)
SystemExceptions.NotFound class>>signalOn:what: (SysExcept.st:731)
[] in Dictionary>>at: (Dictionary.st:139)
Dictionary>>at:ifAbsent: (Dictionary.st:149)
Dictionary>>at: (Dictionary.st:138)
UndefinedObject>>executeStatements (/tmp/call-an-object-method-1.st:9)
Object: Dictionary new: 8 "<0x7f66808123b0>" error: Invalid argument ValueMethod: key not found
SystemExceptions.NotFound(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotFound(Exception)>>signal: (ExcHandling.st:264)
SystemExceptions.NotFound class>>signalOn:what: (SysExcept.st:731)
[] in Dictionary>>at: (Dictionary.st:139)
Dictionary>>at:ifAbsent: (Dictionary.st:149)
Dictionary>>at: (Dictionary.st:138)
UndefinedObject>>executeStatements (/tmp/call-an-object-method-1.st:10)
Object: Dictionary new: 8 "<0x7f6680817d10>" error: Invalid argument PointerMethod: key not found
SystemExceptions.NotFound(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotFound(Exception)>>signal: (ExcHandling.st:264)
SystemExceptions.NotFound class>>signalOn:what: (SysExcept.st:731)
[] in Dictionary>>at: (Dictionary.st:139)
Dictionary>>at:ifAbsent: (Dictionary.st:149)
Dictionary>>at: (Dictionary.st:138)
UndefinedObject>>executeStatements (/tmp/call-an-object-method-1.st:11)
