tests/rosetta/out/Smalltalk/call-an-object-method-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| myValue myPointer |
myValue := Dictionary from:{}.
myPointer := Dictionary from:{}.
(myValue at: 'ValueMethod') value: 0.
(myPointer at: 'PointerMethod') value: 0.
(myPointer at: 'ValueMethod') value: 0.
(myValue at: 'PointerMethod') value: 0.
(myValue at: 'ValueMethod') value: 0.
(myPointer at: 'PointerMethod') value: 0.
